--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -58,10 +58,15 @@ h2 {
 /* ✅ 설정 드롭다운 */
 #settings-container {
     position: relative;
+    transform: translateY(-5em);
 }
 
 #dropdown {
     position: absolute;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
     top: 100%;
     right: 0;
     margin-top: 0.5em;
@@ -70,15 +75,21 @@ h2 {
     border: 1px solid #ccc;
     z-index: 1000;
     width: 100%;
-    max-width: 180px;
+    max-width: 231px;
     border-radius: 8px;
     font-size: var(--font-size-base);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-#dropdown.hidden {
-    display: none;
+#dropdown.show {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
 }
+
+/* #dropdown.hidden {
+    display: none;
+} */
 
 body.dark-mode #dropdown {
     background-color: #2c2c2c;
