--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -36,7 +36,7 @@ body.dark-mode {
     top: 1em;
     right: 1em;
     display: flex;
-    gap: 0.6em;
+    /*gap: 0.6em; */
     z-index: 1001;
 }
 
@@ -46,13 +46,6 @@ body.dark-mode {
     font-size: 1.3em;
     cursor: pointer;
     color: inherit;
-    padding: 0.5em;
-    min-width: 2.5em;
-    min-height: 2.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
 }
 
 /* ✅ 제목 */
