--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -16,9 +16,8 @@ body {
 }
 
 body.dark-mode {
-    color: white;
-    background: rgba(36, 36, 36, 0.8);
-    border-color: rgb(85, 85, 85);
+    background-color: #181818;
+    color: #f1f1f1;
 }
 
 /* ✅ 사이드바 전체 */
@@ -171,15 +170,11 @@ li span {
 }
 
 li button {
+    background: none;
+    border: none;
     color: red;
     font-weight: bold;
     cursor: pointer;
-    background: none;
-    border-width: initial;
-    border-style: none;
-    border-color: initial;
-    border-image: initial;
-    transition: transform 0.2s;
 }
 
 /* ✅ 다크모드 리스트 테두리 */
