--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -102,8 +102,15 @@ h2 {
 } */
 
 body.dark-mode #dropdown {
-    background-color: #2c2c2c;
+    background-color: #181818;
     color: white;
+    border-color: #444;
+    background: #2c2c2c;
+}
+
+body.dark-mode #input-area input {
+    background: #2c2c2c;
+    color: #fff;
     border-color: #444;
 }
 
@@ -131,8 +138,6 @@ body.dark-mode #dropdown {
     border-radius: 4px;
     font-size: var(--font-size-base);
     min-width: 0;
-    background: rgba(36, 36, 36, 0.8);
-    border-color: #444;
 }
 
 #input-area button {
