--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -115,7 +115,7 @@ body.dark-mode #input-area input {
 
 body.dark-mode #dropdown select{
     background-color: #181818;
-    color: white;
+    color: #ccc;
     border-color: #444;
     background: #2c2c2c;
 }
@@ -193,4 +193,8 @@ li button {
 /* ✅ 다크모드 리스트 테두리 */
 body.dark-mode li {
     border-bottom: 1px solid #444;
+}
+
+#video-url {
+    transition: border-color 0.2s ease;
 }
