--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -174,20 +174,13 @@ ul#playlist li {
 }
 
 li span {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-
-    white-space: normal;
-    text-overflow: ellipsis;
-
-    max-width: clamp(60px, 25vw, 100px);
-    /* 너가 원하는 고정폭 */
+    flex-grow: 1;
     margin-left: 0.6em;
-    font-size: 0.9rem;
-    line-height: 1.2em;
-    /* 줄 간격 조절하면 더 깔끔해짐 */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    /*max-width: 85px;*/
+    min-width: 0;
 }
 
 li button {
@@ -216,15 +209,6 @@ li button {
 .thumbnail-hover:hover {
     border-color: #4CAF50;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-}
-
-.line-clamp-2 {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    /* 최대 줄 수 */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    white-space: normal;
 }
 
 /* 다크모드 리스트 테두리 */
