리스트 드래그 기능

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -245,3 +245,9 @@ body.dark-mode #toast {
 #toast.show {
     opacity: 1;
 }
+
+.drag-handle {
+    font-weight: bold;
+    user-select: none;
+    cursor: grab;
+}
